@@ -20,21 +20,22 @@ package ru.investbook.service;
 
 import lombok.RequiredArgsConstructor;
 import org.spacious_team.broker.pojo.CashFlowType;
-import org.spacious_team.broker.pojo.PortfolioProperty;
-import org.spacious_team.broker.pojo.PortfolioPropertyType;
+import org.spacious_team.broker.pojo.PortfolioCash;
 import org.spacious_team.broker.pojo.Security;
 import org.spacious_team.broker.pojo.SecurityQuote;
 import org.spacious_team.broker.pojo.Transaction;
 import org.springframework.stereotype.Service;
+import ru.investbook.converter.PortfolioCashConverter;
 import ru.investbook.converter.PortfolioPropertyConverter;
 import ru.investbook.converter.SecurityQuoteConverter;
-import ru.investbook.entity.PortfolioPropertyEntity;
+import ru.investbook.entity.PortfolioCashEntity;
 import ru.investbook.entity.SecurityEventCashFlowEntity;
 import ru.investbook.report.ClosedPosition;
 import ru.investbook.report.FifoPositions;
 import ru.investbook.report.ForeignExchangeRateService;
 import ru.investbook.report.OpenedPosition;
 import ru.investbook.report.ViewFilter;
+import ru.investbook.repository.PortfolioCashRepository;
 import ru.investbook.repository.PortfolioPropertyRepository;
 import ru.investbook.repository.SecurityEventCashFlowRepository;
 import ru.investbook.repository.SecurityQuoteRepository;
@@ -53,7 +54,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.spacious_team.broker.pojo.SecurityType.CURRENCY_PAIR;
 import static org.springframework.util.StringUtils.hasLength;
@@ -63,6 +63,7 @@ import static org.springframework.util.StringUtils.hasLength;
 public class SecurityProfitServiceImpl implements SecurityProfitService {
 
     private final Set<Integer> priceAndAccruedInterestTypes = Set.of(CashFlowType.PRICE.getId(), CashFlowType.ACCRUED_INTEREST.getId());
+    private final Instant instantOf1970 = Instant.ofEpochSecond(0);
     private final SecurityRepository securityRepository;
     private final TransactionRepository transactionRepository;
     private final TransactionCashFlowRepository transactionCashFlowRepository;
@@ -71,6 +72,8 @@ public class SecurityProfitServiceImpl implements SecurityProfitService {
     private final SecurityQuoteConverter securityQuoteConverter;
     private final PortfolioPropertyRepository portfolioPropertyRepository;
     private final PortfolioPropertyConverter portfolioPropertyConverter;
+    private final PortfolioCashRepository portfolioCashRepository;
+    private final PortfolioCashConverter portfolioCashConverter;
     private final ForeignExchangeRateService foreignExchangeRateService;
 
     @Override
@@ -256,22 +259,18 @@ public class SecurityProfitServiceImpl implements SecurityProfitService {
     }
 
     @Override
-    public Collection<PortfolioProperty> getPortfolioCash(Collection<String> portfolios, Instant atInstant) {
-        List<PortfolioPropertyEntity> entities = portfolios.isEmpty() ?
-                portfolioPropertyRepository
-                        .findDistinctOnPortfolioIdByPropertyAndTimestampBetweenOrderByTimestampDesc(
-                                PortfolioPropertyType.CASH.name(),
-                                Instant.ofEpochSecond(0),
-                                atInstant) :
-                portfolioPropertyRepository
-                        .findDistinctOnPortfolioIdByPortfolioIdInAndPropertyAndTimestampBetweenOrderByTimestampDesc(
-                                portfolios,
-                                PortfolioPropertyType.CASH.name(),
-                                Instant.ofEpochSecond(0),
-                                atInstant);
+    public List<PortfolioCash> getPortfolioCash(Collection<String> portfolios, Instant atInstant) {
+        List<PortfolioCashEntity> entities = portfolios.isEmpty() ?
+                portfolioCashRepository.findDistinctOnPortfolioByTimestampBetweenOrderByTimestampDesc(
+                        instantOf1970,
+                        atInstant) :
+                portfolioCashRepository.findDistinctOnPortfolioByPortfolioInAndTimestampBetweenOrderByTimestampDesc(
+                        portfolios,
+                        instantOf1970,
+                        atInstant);
         return entities.stream()
-                .map(portfolioPropertyConverter::fromEntity)
-                .collect(Collectors.toList());
+                .map(portfolioCashConverter::fromEntity)
+                .toList();
     }
 
     private BigDecimal convertToCurrency(BigDecimal value, String fromCurrency, String toCurrency) {
